--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -51,8 +51,8 @@ set(SOURCES
     WPA/TypeAnalysis.cpp
     WPA/WPAPass.cpp)
 
-add_llvm_loadable_module(Svf ${SOURCES})
-add_llvm_Library(LLVMSvf ${SOURCES})
+add_llvm_library(Svf ${SOURCES})
+add_llvm_library(LLVMSvf ${SOURCES})
 
 link_directories( ${CMAKE_BINARY_DIR}/lib/Cudd )
 llvm_map_components_to_libnames(llvm_libs bitwriter core ipo irreader instcombine instrumentation target linker analysis scalaropts support )
